--- a/instalura/package.json
+++ b/instalura/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "pubsub-js": "^1.5.4",
     "react": "^16.4.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.4.1",
     "react-router": "^3.2.0",
     "react-scripts": "1.1.4"
