--- a/instalura/package.json
+++ b/instalura/package.json
@@ -8,7 +8,9 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.4.1",
     "react-router": "^3.2.0",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
