--- a/instalura/package.json
+++ b/instalura/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "immutable": "^3.8.1",
+    "prop-types": "^15.6.2",
     "pubsub-js": "^1.5.4",
     "react": "^16.4.1",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-router": "^3.2.0",
     "react-scripts": "1.1.4",
     "redux": "^3.6.0",
